Fix bundle ID to com.medivox.app - final

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,17 @@
-name: fanny_real
-description: MediVox – Tu asistente médico inteligente
+name: fannys_bot_mobile
+description: Supabase OAuth login
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_dotenv: ^5.2.1
+  supabase_flutter: ^2.8.0
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/google_logo.png
